--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,18 @@
 ---
-title: "example.github.io"
+title: "Yang Xie's Personal Website"
 ---
 
-This is a Quarto website.
+永远相信美好的事情即将发生！
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+- Hi, I'm Yang Xie! I'm currently a master's student in Biostatistics at the [University of Minnesota School of Public Health](https://www.sph.umn.edu/). 
 
-```{r}
-1 + 1
-```
+- My research interests include clinical trials, survival analysis, and statistical genetics.
+
+- I love coding! I'm proficient with SAS and I'm self-learning [P8105](https://p8105.com/) from Columbia University to enhance my R programming skills.
+
+
+
+
+
+
+
